--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,3 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.FastcampusSNS" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SampleSns" parent="@style/Theme.AppCompat.NoActionBar"/>
 </resources>
